--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <main>
         <section id="sobre-mim" class="resume">
         <h2>Sobre Mim</h2>
-        <p>Meu nome é Ruan sou um desenvolvedor Frontend até o momento. Pois acredito que estamos em constante mudança. Prefiro continuar aprendendo, me desafiando e realizando projetos interessantes.</p>
+        <p>Meu nome é Ruan e, até o momento, atuo como desenvolvedor Frontend. Acredito que estamos em constante evolução, por isso busco sempre aprender, me desafiar e criar projetos que sejam realmente interessantes.</p>
         </section>
 
         <section id="sobre" class="animar">
