--- a/index.html
+++ b/index.html
@@ -3,33 +3,35 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>portfolio</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" type="text/css" href="style.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.15.1/devicon.min.css">
+    <title>Portifolio</title>
 </head>
 
 <body>
-    <section id="contato" class="info">
-        <div class="info-item">
+    <header>
+
+        <section id="contato" class="info">
+        <nav class="info-item">
             <a href="https://www.linkedin.com/in/ruan-baião-a12316303" taret="blank">
             <i class="devicon-linkedin-plain"></i>
             </a>
-        </div>
-        <div class="info-item">
+        </nav>
+        <nav class="info-item">
             <a href="https://github.com/Bodscreed" target="blank">
             <i class="devicon-github-plain"></i>
             </a>
-        </div>           
-    </section>
+        </nav>           
+        </section>
 
-    <header>
-        <image src="imagens/R.png" alt="Minha Foto" class="foto-perfil"></image>
+        <image src="imagens/R.png" alt="Ruan" class="foto-perfil"></image>
         <div class="baloom">Olá! Eu sou</div>
         <h1>
-            Ruan Baião
+            <strong>Ruan Baião</strong>
         </h1>
         <h2>Desenvolvedor Frontend</h2>
         <button id="cta-btn">Download CV</button>
+        <image src="imagens/ilustração.png" alt="Front" class="ilustracao"></image>
         
     </header>
 
